--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --blue-rgb: 6, 36, 56;
+  --bluegray-rgb: 43, 76, 101;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,18 +18,12 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+body {
+  background-color: rgb(var(--blue-rgb));
 }
